# ts3screenshare

./: .gitignore  App.xaml  App.xaml.cs  AssemblyInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  TS3ScreenShare.csproj  TS3ScreenShare.slnx  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: release.yml
Models/: AppSettings.cs  CaptureSource.cs  SidebarItem.cs
Plugin/: CMakeLists.txt
Plugin/src/: pipe_client.cpp  pipe_client.h  plugin.cpp
Server/: Dockerfile  Program.cs  StreamHub.cs  StreamRegistry.cs  TS3PresenceWatcher.cs  TS3ScreenShare.Server.csproj  TS3ServerQueryOptions.cs  TS3ServerQueryService.cs  appsettings.json
Server/Properties/: launchSettings.json
Services/: AudioCaptureService.cs  AudioPlaybackService.cs  RelayService.cs  ScreenCaptureService.cs  SettingsService.cs  TS3QueryService.cs  UpdateCheckService.cs  WebRtcService.cs
Shared/: IsExternalInit.cs  SignalingMessages.cs
Views/: CaptureSourceDialog.xaml  CaptureSourceDialog.xaml.cs
installer/: build-installer.ps1  setup.iss
